spacing fixes

--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ header img {
 }
 
 .portfolio-section {
-  margin-top: 78px;
+  padding-top: 78px;
 }
 
 .logos-spacing {
